# somers

./: .gitignore  assign_ahn4.py  assign_parcelvalues.py  assign_soiltype.py  assign_timeseriesstats.py  assign_top10.py  bro_preparegmwselection.py  db_helpers.py  environment.yml  make_location_metadata_bro.py  make_location_metadata_hdsr.py  make_location_metadata_hhnk.py  make_location_metadata_nobv.py  make_location_metadata_waterschappen.py  orm_loadtimeseries.py  pyproject.toml  spatial_website_env.yml
converters/: convert_nobv.py  convert_regiodeal.py  wells_lytse_deelen_to_parquet.py
converters/waterschappen/: convert_agv.py  convert_hdsr.py  convert_hhsk.py  convert_hhsk_2026.py  convert_hunze_en_aas.py  convert_rijnland.py  convert_rivierenland.py  convert_wdod.py  convert_wetterskip.py  convert_wshd.py  deteremine_freeboard_wshd.py
orm_timeseries/: orm_timeseries_regiodeal.py  orm_timeseries_wskip.py
sqls/: update_bro_wells.sql  update_pkey_copytohistorytable.sql
ts_helpers/: ts_helpers_bro.py  ts_helpers_regiodeal.py  ts_helpers_wskip.py
upload_data/: bro_from_api.py  delfland_from_api.py  gws_wskip.py  handmatige_uitvraag_to_db.py  hdsr_from_api.py  hhnk_from_api.py  nobvdata_to_db.py  regiodealdata_to_db .py
